--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@babel/preset-typescript": "^7.26.0",
     "@babel/register": "^7.25.9",
     "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "concurrently": "^9.1.0",
     "serve": "^14.2.4",
     "ts-loader": "^9.5.1",
@@ -21,5 +23,9 @@
     "webpack-cli": "^5.1.4"
   },
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1"
+  }
 }
