feat: integrate react compiler and add collect detailed render information

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,11 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "noImplicitAny": false,
   },
   "include": ["src", "webpack.config.ts"]
 }
