--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "babel-plugin-react-compiler": "^19.0.0-beta-a7bf2bd-20241110",
     "concurrently": "^9.1.0",
+    "react-compiler-webpack": "^0.1.2",
     "serve": "^14.2.4",
     "ts-loader": "^9.5.1",
     "typescript": "~5.6.2",
