feat: add eslint integration

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:non-react-compiled-version:dev:watch": "yarn build:non-react-compiled-version:dev --watch",
     "dev": "concurrently \"yarn build:dev:watch\" \"yarn build:non-react-compiled-version:dev:watch\" \"serve\"",
     "build": "webpack --mode production",
+    "lint": "eslint src",
     "prettier": "prettier --write ."
   },
   "devDependencies": {
@@ -17,16 +18,21 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-typescript": "^7.26.0",
     "@babel/register": "^7.25.9",
+    "@eslint/js": "^9.15.0",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "babel-plugin-react-compiler": "^19.0.0-beta-a7bf2bd-20241110",
     "concurrently": "^9.1.0",
+    "eslint": "9.14.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "prettier": "3.3.3",
     "react-compiler-webpack": "^0.1.2",
     "serve": "^14.2.4",
     "ts-loader": "^9.5.1",
     "typescript": "~5.6.2",
+    "typescript-eslint": "^8.14.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^5.1.4"
   },
