--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^9.1.0",
     "eslint": "9.14.0",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-a7bf2bd-20241110",
     "globals": "^15.12.0",
     "prettier": "3.3.3",
     "react-compiler-webpack": "^0.1.2",
