--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "author": "Yunus Emre Dilber",
   "scripts": {
+    "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "build:dev:watch": "yarn build:dev --watch",
+    "build:non-react-compiled-version": "webpack --mode production --config ./non-react-compiler-webpack.config.ts",
     "build:non-react-compiled-version:dev": "webpack --mode development --config ./non-react-compiler-webpack.config.ts",
     "build:non-react-compiled-version:dev:watch": "yarn build:non-react-compiled-version:dev --watch",
+    "build:all:prod": "yarn build && yarn build:non-react-compiled-version",
     "dev": "concurrently \"yarn build:dev:watch\" \"yarn build:non-react-compiled-version:dev:watch\" \"serve\"",
-    "build": "webpack --mode production",
     "lint": "eslint src",
     "prettier": "prettier --write ."
   },
